Add the progress of today

--- a/app/(auth)/register/page.module.scss
+++ b/app/(auth)/register/page.module.scss
@@ -46,6 +46,12 @@
   // margin-bottom: 20px;
 }
 
+.Link {
+  // text-decoration: none;
+  color: #fff;
+  font-size: 18px;
+}
+
 .button {
   display: block; /* make the buttons full width */
   width: 100%;
