--- a/app/profile/[username]/page.module.scss
+++ b/app/profile/[username]/page.module.scss
@@ -3,5 +3,7 @@
   margin: 0 auto; /* center the content horizontally */
   padding: 20px; /* add some padding to the content */
   // border: 50px;
-  // border-radius: 20px;
+  background-color: #773030;
+
+  border-radius: 20px;
 }
