--- a/app/(auth)/login/page.module.scss
+++ b/app/(auth)/login/page.module.scss
@@ -1,9 +1,52 @@
-.form {
+.main {
   max-width: 428px; /* set the maximum width to the iPhone 14 Max Pro's screen width */
   margin: 0 auto; /* center the content horizontally */
   padding: 20px; /* add some padding to the content */
+  background-color: #773030;
   // border: 50px;
-  // border-radius: 20px;
+  // border-color: black;
+  border-radius: 20px;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
+}
+
+.div {
+  display: flex; /* make the div a flex container */
+  // flex-direction: column; /* make the flex items stack vertically */
+  align-items: center; /* center the flex items horizontally */
+  justify-content: center; /* center the flex items vertically */
+  font-size: 40px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+// .form {
+//   max-width: 428px; /* set the maximum width to the iPhone 14 Max Pro's screen width */
+//   margin: 0 auto; /* center the content horizontally */
+//   padding: 20px; /* add some padding to the content */
+//   background-color: #773030;
+//   // border: 50px;
+//   border-radius: 20px;
+// }
+// .h1 {
+//   font-size: 50px;
+//   font-weight: bold;
+//   margin-bottom: 20px;
+//   display: flex;
+//   justify-content: center;
+//   align-content: center;
+// }
+
+.image {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  margin-left: -6px;
+  // width: 100px;
+  // height: 100px;
+  // border-radius: 50%;
+  // margin-bottom: 20px;
 }
 
 .button {
