--- a/app/globals.scss
+++ b/app/globals.scss
@@ -12,5 +12,6 @@ body {
   color: white;
   line-height: 1.5;
   margin: 10px;
-  background-color: #773030;
+  // background-color: #773030;
+  // color: #773030;
 }
