--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -2,8 +2,13 @@
   max-width: 428px; /* set the maximum width to the iPhone 14 Max Pro's screen width */
   margin: 0 auto; /* center the content horizontally */
   padding: 20px; /* add some padding to the content */
+  background-color: #773030;
   // border: 50px;
-  // border-radius: 20px;
+  // border-color: black;
+  border-radius: 20px;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
 }
 
 .div {
@@ -14,6 +19,17 @@
   font-size: 30px;
   font-weight: bold;
   margin-bottom: 20px;
+}
+
+.image {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  margin-left: -6px;
+  // width: 100px;
+  // height: 100px;
+  // border-radius: 50%;
+  // margin-bottom: 20px;
 }
 .link {
   text-decoration: none;
