Update the students sessionToken

--- a/app/profile/[username]/student/page.module.scss
+++ b/app/profile/[username]/student/page.module.scss
@@ -3,9 +3,8 @@
   height: 850px;
   margin: 0 auto;
   padding: 20px;
-  color: white;
-
   background-color: #773030;
-
+  overflow: auto;
   border-radius: 20px;
+  color: white;
 }
