--- a/app/(auth)/login/page.module.scss
+++ b/app/(auth)/login/page.module.scss
@@ -1,21 +1,17 @@
 .main {
-  max-width: 428px; /* set the maximum width to the iPhone 14 Max Pro's screen width */
-  margin: 0 auto; /* center the content horizontally */
-  padding: 20px; /* add some padding to the content */
+  width: 428px;
+  height: 850px;
+  margin: 0 auto;
+  padding: 20px;
   background-color: #773030;
-  // border: 50px;
-  // border-color: black;
   border-radius: 20px;
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
 }
 
 .div {
-  display: flex; /* make the div a flex container */
-  // flex-direction: column; /* make the flex items stack vertically */
-  align-items: center; /* center the flex items horizontally */
-  justify-content: center; /* center the flex items vertically */
+  display: flex;
+
+  align-items: center;
+  justify-content: center;
   font-size: 40px;
   font-weight: bold;
   margin-bottom: 20px;
@@ -43,29 +39,25 @@
   align-content: center;
   justify-content: center;
   margin-left: -6px;
-  // width: 100px;
-  // height: 100px;
-  // border-radius: 50%;
-  // margin-bottom: 20px;
 }
 
 .button {
-  display: block; /* make the buttons full width */
+  display: block;
   width: 100%;
-  margin-bottom: 10px; /* add some space between the buttons */
-  padding: 10px 20px; /* add some padding to the buttons */
-  font-size: 18px; /* set the font size */
-  background-color: #007aff; /* set the background color */
-  color: #fff; /* set the text color */
-  border: none; /* remove the border */
-  border-radius: 8px; /* add some rounded corners */
+  margin-bottom: 10px;
+  padding: 10px 20px;
+  font-size: 18px;
+  background-color: #007aff;
+  color: #fff;
+  border: none;
+  border-radius: 8px;
 }
 
 .button:hover {
-  background-color: #0056b3; /* change the background color on hover */
+  background-color: #0056b3;
 }
 .hr {
-  margin: 20px 0; /* add some space above and below the horizontal lines */
-  border: none; /* remove the border */
-  border-top: 1px solid #ccc; /* add a light gray line */
+  margin: 20px 0;
+  border: none;
+  border-top: 1px solid #ccc;
 }
