--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,5 +1,8 @@
 .main {
-  max-width: 428px; /* set the maximum width to the iPhone 14 Max Pro's screen width */
+  width: 428px;
+  height: 850px;
+  // max-width: 428px;
+  // max-height: 850px; /* set the maximum width to the iPhone 14 Max Pro's screen width */
   margin: 0 auto; /* center the content horizontally */
   padding: 20px; /* add some padding to the content */
   background-color: #773030;
