--- a/app/profile/[username]/post/page.module.scss
+++ b/app/profile/[username]/post/page.module.scss
@@ -9,34 +9,116 @@
   color: white;
 }
 
-// .form {
-//   width: 428px;
-//   height: 850px;
-//   overflow: auto;
-//   // max-width: 428px; /* set the maximum width to the iPhone 14 Max Pro's screen width */
-//   margin: 0 auto; /* center the content horizontally */
-//   padding: 20px; /* add some padding to the content */
-//   // border: 50px;
-//   // border-radius: 20px;
-// }
+.h1 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-// .button {
-//   display: block; /* make the buttons full width */
-//   width: 100%;
-//   margin-bottom: 10px; /* add some space between the buttons */
-//   padding: 10px 20px; /* add some padding to the buttons */
-//   font-size: 18px; /* set the font size */
-//   background-color: #007aff; /* set the background color */
-//   color: #fff; /* set the text color */
-//   border: none; /* remove the border */
-//   border-radius: 8px; /* add some rounded corners */
-// }
+.button {
+  background-color: #0066cc;
+  color: white;
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-right: 1rem;
+}
 
-// .button:hover {
-//   background-color: #0056b3; /* change the background color on hover */
-// }
-// .hr {
-//   margin: 20px 0; /* add some space above and below the horizontal lines */
-//   border: none; /* remove the border */
-//   border-top: 1px solid #ccc; /* add a light gray line */
-// }
+.form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1rem;
+}
+
+.label {
+  margin-top: 1rem;
+  display: block;
+  font-weight: bold;
+}
+
+.input,
+.textarea {
+  border: 1px solid #ccc;
+  padding: 0.5rem;
+  font-size: 1rem;
+  margin-top: 0.5rem;
+  border-radius: 4px;
+}
+
+.button[type='submit'] {
+  margin-top: 1rem;
+}
+
+.error {
+  color: red;
+  margin-top: 1rem;
+}
+
+.post {
+  margin-top: 2rem;
+  border: 1px solid #ccc;
+  padding: 1rem;
+  border-radius: 4px;
+}
+
+.post h1 {
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.post p {
+  font-size: 1.2rem;
+  margin-bottom: 1rem;
+}
+
+.comment-form {
+  margin-top: 1rem;
+}
+
+.comment-form label {
+  display: block;
+  margin-bottom: 0.5rem;
+}
+
+.comment-form input,
+.comment-form textarea {
+  width: 100%;
+  margin-top: 0.5rem;
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.comment-form button {
+  margin-top: 0.5rem;
+  background-color: #0066cc;
+  color: white;
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.comments {
+  margin-top: 1rem;
+}
+
+.comment {
+  margin-top: 1rem;
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.comment p {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+}
+
+.comment small {
+  font-size: 0.8rem;
+  color: #666;
+}
