--- a/app/profile/[username]/student/page.module.scss
+++ b/app/profile/[username]/student/page.module.scss
@@ -7,4 +7,88 @@
   overflow: auto;
   border-radius: 20px;
   color: white;
+  // display: flex;
+  // // flex-direction: column;
+  // align-items: center;
+}
+
+.h1 {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.button {
+  font-size: 1rem;
+  margin-bottom: 1rem;
+  padding: 0.5rem 1rem;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: #388e3c;
+}
+
+.label {
+  display: block;
+  margin-bottom: 0.5rem;
+  font-size: 1rem;
+}
+
+.input {
+  font-size: 1rem;
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 1rem;
+  width: 100%;
+}
+
+.input2 {
+  font-size: 1rem;
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 1rem;
+  width: 100%;
+}
+
+.delete {
+  background-color: #f44336;
+}
+
+.edit {
+  background-color: #2196f3;
+}
+
+.save {
+  background-color: #4caf50;
+}
+
+.delete,
+.edit,
+.save {
+  font-size: 0.8rem;
+  // color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 0.5rem 1rem;
+  margin-left: 1rem;
+  cursor: pointer;
+}
+
+.delete:hover {
+  background-color: #e53935;
+}
+
+.edit:hover {
+  background-color: #1976d2;
+}
+
+.save:hover {
+  background-color: #388e3c;
 }
