Add hide input fields button

--- a/app/profile/[username]/page.module.scss
+++ b/app/profile/[username]/page.module.scss
@@ -9,3 +9,17 @@
 
   border-radius: 20px;
 }
+
+.Image {
+  margin-left: 20rem;
+  // margin-bottom: 10rem;
+  // width: 100%;
+  // height: 100%;
+  // margin: 0 auto;
+  // padding: 20px;
+  // color: white;
+
+  // background-color: #773030;
+
+  // border-radius: 20px;
+}
