--- a/app/profile/[username]/post/page.module.scss
+++ b/app/profile/[username]/post/page.module.scss
@@ -26,6 +26,17 @@
   cursor: pointer;
   margin-right: 1rem;
 }
+.button2 {
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 0 auto;
+  // margin-right: 1rem;
+  // margin-left: 1rem;
+}
 
 .form {
   display: flex;
@@ -69,9 +80,12 @@
   margin-bottom: 0.5rem;
 }
 
-.post p {
+.p {
   font-size: 1.2rem;
   margin-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .comment-form {
