--- a/app/profile/[username]/student/page.module.scss
+++ b/app/profile/[username]/student/page.module.scss
@@ -44,7 +44,7 @@
   padding: 0.5rem;
   border: 1px solid #ccc;
   border-radius: 4px;
-  margin-bottom: 1rem;
+  // margin-bottom: 1rem;
   width: 100%;
 }
 
