--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,17 +1,17 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
+// *,
+// // *::before,
+// // *::after {
+// //   box-sizing: border-box;
+// }
 
 body {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-family: 'Playfair Display', serif;
-  font-size: 21px;
+  // -webkit-font-smoothing: antialiased;
+  // -moz-osx-font-smoothing: grayscale;
+  // font-family: 'Playfair Display', serif;
+  // font-size: 21px;
   color: white;
-  line-height: 1.5;
-  margin: 10px;
+  // line-height: 1.5;
+  // margin: 10px;
   // background-color: #773030;
   // color: #773030;
 }
