--- a/app/landingpage/page.module.scss
+++ b/app/landingpage/page.module.scss
@@ -20,7 +20,7 @@
     font-size: 16px;
     padding: 10px 20px;
     background-color: #007aff;
-    color: white;
+    color: #fff;
     border-radius: 8px;
   }
 
@@ -107,68 +107,15 @@
 }
 
 // .main {
-//   width: 428px;
-//   height: 850px;
+//   width: 100%;
+//   height: 100vh;
 //   margin: 0 auto;
 //   padding: 20px;
 //   background-color: #773030;
+//   // overflow: auto;
 //   border-radius: 20px;
-// }
-
-// .div {
-//   display: flex;
-
-//   align-items: center;
-//   justify-content: center;
-//   font-size: 40px;
-//   font-weight: bold;
-//   margin-bottom: 20px;
-// }
-
-// // .form {
-// //   max-width: 428px; /* set the maximum width to the iPhone 14 Max Pro's screen width */
-// //   margin: 0 auto; /* center the content horizontally */
-// //   padding: 20px; /* add some padding to the content */
-// //   background-color: #773030;
-// //   // border: 50px;
-// //   // border-color: black;
-// //   // box-sizing: 30px;
-// //   border-radius: 20px;
-
-// //   // border: 50px;
-// //   // border-radius: 20px;
-// // }
-
-// .image {
-//   display: flex;
-//   align-content: center;
-//   justify-content: center;
-//   margin-left: -6px;
-// }
-
-// .Link {
-//   // text-decoration: none;
-//   color: #fff;
-//   font-size: 18px;
-// }
-
-// .button {
-//   display: block;
-//   width: 100%;
-//   margin-bottom: 10px;
-//   padding: 10px 20px;
-//   font-size: 18px;
-//   background-color: #007aff;
-//   color: #fff;
-//   border: none;
-//   border-radius: 8px;
-// }
-
-// .button:hover {
-//   background-color: #0056b3;
-// }
-// .hr {
-//   margin: 20px 0;
-//   border: none;
-//   border-top: 1px solid #ccc;
+//   color: white;
+//   // display: flex;
+//   // // flex-direction: column;
+//   // align-items: center;
 // }
