--- a/app/profile/[username]/student/page.module.scss
+++ b/app/profile/[username]/student/page.module.scss
@@ -1,6 +1,8 @@
 .main {
-  width: 428px;
-  height: 850px;
+  // width: 428px;
+  // height: 850px;
+  width: 100%;
+  height: 100vh;
   margin: 0 auto;
   padding: 20px;
   background-color: #773030;
@@ -45,7 +47,7 @@
   border: 1px solid #ccc;
   border-radius: 4px;
   // margin-bottom: 1rem;
-  width: 100%;
+  // width: 90%;
 }
 
 .input2 {
@@ -54,24 +56,22 @@
   border: 1px solid #ccc;
   border-radius: 4px;
   margin-bottom: 1rem;
-  width: 100%;
+  width: 90%;
 }
 
 .delete {
   background-color: #f44336;
+  font-size: 0.8rem;
+  // color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 0.5rem 0.5rem;
+  margin-left: 12rem;
+  cursor: pointer;
 }
 
 .edit {
   background-color: #2196f3;
-}
-
-.save {
-  background-color: #4caf50;
-}
-
-.delete,
-.edit,
-.save {
   font-size: 0.8rem;
   // color: white;
   border: none;
@@ -80,6 +80,29 @@
   margin-left: 1rem;
   cursor: pointer;
 }
+
+.save {
+  background-color: #4caf50;
+  font-size: 0.8rem;
+  // color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 0.5rem 1rem;
+  margin-left: 7rem;
+  cursor: pointer;
+}
+
+// .delete,
+// .edit,
+// .save {
+//   font-size: 0.8rem;
+//   // color: white;
+//   border: none;
+//   border-radius: 4px;
+//   padding: 0.5rem 1rem;
+//   margin-left: 7rem;
+//   cursor: pointer;
+// }
 
 .delete:hover {
   background-color: #e53935;
@@ -91,4 +114,9 @@
 
 .save:hover {
   background-color: #388e3c;
+}
+
+.Link {
+  // text-decoration: none;
+  color: white;
 }
