--- a/app/(auth)/studentLogin/page.module.scss
+++ b/app/(auth)/studentLogin/page.module.scss
@@ -1,61 +1,61 @@
-.main {
-  width: 428px;
-  height: 850px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: #773030;
-  border-radius: 20px;
-  color: white;
-}
-
-.div {
-  display: flex;
-
-  align-items: center;
-  justify-content: center;
-  font-size: 40px;
-  font-weight: bold;
-  margin-bottom: 20px;
-}
-
-// .form {
-//   max-width: 428px; /* set the maximum width to the iPhone 14 Max Pro's screen width */
-//   margin: 0 auto; /* center the content horizontally */
-//   padding: 20px; /* add some padding to the content */
+// .main {
+//   width: 428px;
+//   height: 850px;
+//   margin: 0 auto;
+//   padding: 20px;
 //   background-color: #773030;
-//   // border: 50px;
-//   // border-color: black;
-//   // box-sizing: 30px;
 //   border-radius: 20px;
-
-//   // border: 50px;
-//   // border-radius: 20px;
+//   color: white;
 // }
 
-.image {
-  display: flex;
-  align-content: center;
-  justify-content: center;
-  margin-left: -6px;
-}
+// .div {
+//   display: flex;
 
-.button {
-  display: block;
-  width: 100%;
-  margin-bottom: 10px;
-  padding: 10px 20px;
-  font-size: 18px;
-  background-color: #007aff;
-  color: #fff;
-  border: none;
-  border-radius: 8px;
-}
+//   align-items: center;
+//   justify-content: center;
+//   font-size: 40px;
+//   font-weight: bold;
+//   margin-bottom: 20px;
+// }
 
-.button:hover {
-  background-color: #0056b3;
-}
-.hr {
-  margin: 20px 0;
-  border: none;
-  border-top: 1px solid #ccc;
-}
+// // .form {
+// //   max-width: 428px; /* set the maximum width to the iPhone 14 Max Pro's screen width */
+// //   margin: 0 auto; /* center the content horizontally */
+// //   padding: 20px; /* add some padding to the content */
+// //   background-color: #773030;
+// //   // border: 50px;
+// //   // border-color: black;
+// //   // box-sizing: 30px;
+// //   border-radius: 20px;
+
+// //   // border: 50px;
+// //   // border-radius: 20px;
+// // }
+
+// .image {
+//   display: flex;
+//   align-content: center;
+//   justify-content: center;
+//   margin-left: -6px;
+// }
+
+// .button {
+//   display: block;
+//   width: 100%;
+//   margin-bottom: 10px;
+//   padding: 10px 20px;
+//   font-size: 18px;
+//   background-color: #007aff;
+//   color: #fff;
+//   border: none;
+//   border-radius: 8px;
+// }
+
+// .button:hover {
+//   background-color: #0056b3;
+// }
+// .hr {
+//   margin: 20px 0;
+//   border: none;
+//   border-top: 1px solid #ccc;
+// }
