--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,131 +1,138 @@
+@media (max-width: 640px) {
+  .max-w-screen-lg {
+    max-width: 100%;
+    padding: 1rem;
+  }
+}
+
 // // @import 'tailwindcss/base';
 // // @import 'tailwindcss/components';
 // // @import 'tailwindcss/utilities';
 
-// /* Mobile styles */
-// @media screen and (max-width: 480px) {
-//   .main {
-//     // @apply mx-auto max-w-xl py-4 px-8 bg-gray-100;
-//     min-height: 100vh;
-//     padding: 20px;
-//     background-color: #773030;
-//     margin: 0 auto;
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-//     background-image: url
-//       (
-//         'https://i.pinimg.com/originals/92/2d/db/922ddb2a059239227bacce840040b302.jpg'
-//       );
-//   }
+/* Mobile styles */
+@media screen and (max-width: 480px) {
+  .main {
+    // @apply mx-auto max-w-xl py-4 px-8 bg-gray-100;
+    min-height: 100vh;
+    padding: 20px;
+    // background-color: #773030;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    //   background-image: url
+    //     (
+    //       'https://i.pinimg.com/originals/92/2d/db/922ddb2a059239227bacce840040b302.jpg'
+    //     );
+  }
 
-//   .div {
-//     font-size: 24px;
-//     margin-bottom: 20px;
-//   }
+  .div {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
 
-//   .button {
-//     font-size: 16px;
-//     padding: 10px 20px;
-//     background-color: #007aff;
-//     color: #fff;
-//     border-radius: 8px;
-//   }
+  // .button {
+  //   font-size: 16px;
+  //   padding: 10px 20px;
+  //   background-color: #007aff;
+  //   color: #fff;
+  //   border-radius: 8px;
+  // }
 
-//   .button:hover {
-//     background-color: #0056b3;
-//   }
+  // .button:hover {
+  //   background-color: #0056b3;
+  // }
 
-//   .Link {
-//     color: #fff;
-//     text-decoration: none;
-//     display: flex;
-//   }
-// }
+  .Link {
+    color: #fff;
+    text-decoration: none;
+    display: flex;
+  }
+}
 
-// /* Tablet styles */
-// @media screen and (min-width: 481px) and (max-width: 768px) {
-//   .main {
-//     min-height: 100vh;
-//     padding: 30px;
-//     background-color: #773030;
-//     margin: 0 auto;
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-//   }
+/* Tablet styles */
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .main {
+    min-height: 100vh;
+    padding: 30px;
+    // background-color: #773030;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-//   .div {
-//     font-size: 32px;
-//     margin-bottom: 30px;
-//   }
+  .div {
+    font-size: 32px;
+    margin-bottom: 30px;
+  }
 
-//   .button {
-//     font-size: 20px;
-//     padding: 15px 30px;
-//     background-color: #007aff;
-//     color: #fff;
-//     border-radius: 8px;
-//   }
+  // .button {
+  //   font-size: 20px;
+  //   padding: 15px 30px;
+  //   background-color: #007aff;
+  //   color: #fff;
+  //   border-radius: 8px;
+  // }
 
-//   .button:hover {
-//     background-color: #0056b3;
-//   }
-// }
+  // .button:hover {
+  //   background-color: #0056b3;
+  // }
+}
 
-// /* Desktop styles */
-// @media screen and (min-width: 769px) {
-//   .main {
-//     // @apply mx-auto max-w-xl py-4 px-8 bg-gray-100;
-//     min-height: 100vh;
-//     padding: 40px;
-//     // background-color: #773030;
-//     margin: 0 auto;
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-//     background-image: url('/image/Schoolpage2.jpg');
-//   }
+/* Desktop styles */
+@media screen and (min-width: 769px) {
+  .main {
+    // @apply mx-auto max-w-xl py-4 px-8 bg-gray-100;
+    min-height: 100vh;
+    padding: 40px;
+    // background-color: #773030;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    // background-image: url('/image/Schoolpage2.jpg');
+  }
 
-//   .div {
-//     font-size: 48px;
-//     margin-bottom: 40px;
-//   }
+  .div {
+    font-size: 48px;
+    margin-bottom: 40px;
+  }
 
-//   .button {
-//     font-size: 18px;
-//     padding: 20px 40px;
-//     background-color: #007aff;
-//     color: #fff;
-//     border-radius: 8px;
-//   }
+  // .button {
+  //   font-size: 18px;
+  //   padding: 20px 40px;
+  //   background-color: #007aff;
+  //   color: #fff;
+  //   border-radius: 8px;
+  // }
 
-//   .button:hover {
-//     background-color: #0056b3;
-//   }
-//   // .image {
-//   //   width: 100%;
-//   //   height: 100%;
-//   //   object-fit: cover;
-//   // }
+  // .button:hover {
+  //   background-color: #0056b3;
+  // }
+  // .image {
+  //   width: 100%;
+  //   height: 100%;
+  //   object-fit: cover;
+  // }
 
-//   .Link {
-//     // color: #fff;
-//     text-decoration: none;
-//     // margin: auto;
-//     // display: flex;
+  .Link {
+    // color: #fff;
+    text-decoration: none;
+    // margin: auto;
+    // display: flex;
 
-//     // flex-direction: row;
-//     // background-color: #773030;
-//     // margin-bottom: 2rem;
-//     // background-color: rgb(147, 147, 195);
-//   }
+    // flex-direction: row;
+    // background-color: #773030;
+    // margin-bottom: 2rem;
+    // background-color: rgb(147, 147, 195);
+  }
 
-//   .Font {
-//     width: 2%;
-//     height: 2%;
-//     z-index: 5;
-//     display: flex;
-//     flex-direction: row;
-//   }
-// }
+  // .Font {
+  //   width: 2%;
+  //   height: 2%;
+  //   z-index: 5;
+  //   display: flex;
+  //   flex-direction: row;
+  // }
+}
