--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,8 @@ html {
   /* overflow-y: auto;
   overflow-x: hidden; */
 
-  font-family: 'Playfair Display', serif;
+  font-family: 'Montserrat', sans-serif;
+  /* 'Playfair Display', serif; */
 }
 
 /* .custom-img {
